// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeAccordionItemNestedComponentOptions should normalize complex accordion item nested component options 1`] = `
{
  "accordion": {
    "header": null,
    "identifier": null,
    "importList": [],
    "itemList": [],
    "multiple": true,
    "name": "nested-accordion",
    "persistent": null,
    "propertyList": [],
    "upstream": null,
    "withPermission": false,
  },
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./test-nested-accordion/test-nested-accordion.component",
      "name": "TestNestedAccordionComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "parent-accordion",
  "backend": {
    "kind": "nestjs",
    "module": null,
    "prefix": null,
    "project": null,
    "serverId": null,
  },
  "componentName": "test-nested-panel",
  "context": null,
  "controllerName": "test-nested",
  "description": null,
  "directory": "parent-accordion/test-nested-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "nested",
  "modifiers": [],
  "name": "test-nested",
  "nestModule": "parent-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "template": "nested-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;

exports[`NormalizeAccordionItemNestedComponentOptions should normalize minimal accordion item nested component options 1`] = `
{
  "accordion": {
    "header": null,
    "identifier": null,
    "importList": [],
    "itemList": [],
    "multiple": false,
    "name": "test-nested",
    "persistent": null,
    "propertyList": [],
    "upstream": null,
    "withPermission": false,
  },
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./test-nested-accordion/test-nested-accordion.component",
      "name": "TestNestedAccordionComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "parent-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "test-nested-panel",
  "context": null,
  "controllerName": "test-nested",
  "description": null,
  "directory": "parent-accordion/test-nested-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "nested",
  "modifiers": [],
  "name": "test-nested",
  "nestModule": "parent-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "template": "nested-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;
